# knight-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Utils.cpp  Utils.d  Utils.h  Watch.cpp  camera.cpp  camera.h  geometry.cpp  geometry.h  glew.d  gradient_map_material.cpp  gradient_map_material.h  gradientmap.sublime-project  libgl.supp  main.cpp  main.d  material.cpp  material.h  script.cpp  script.h  shader_cache.cpp  shader_cache.h  stb_image.c  texture.vert  tinythread.d  transform.cpp  transform.h  utils.cpp  utils.h  watch.h
CMakeModules/: FindGLEW.cmake  FindLibClang.cmake
assets/: editor_component.cpp  editor_component.h
assets/proto/: component.proto  meta.proto  object_collection.proto  transform_component.proto  types.proto
assets/schema/: entity.fbs  entity_list.fbs  material_resource.fbs  mesh_component.fbs  transform_component.fbs  types.fbs
assets/schema/editor/: meta.fbs
assets/shaders/: blinn_phong.shader  texture.frag
demo/: CMakeLists.txt  client.cpp  game.cpp  game.h  game_code.cpp  game_code.h  game_platform.h  main.cpp  script.cpp
demo/archetypes/: AnyFoo.hpp  any_bar.hpp  any_foo.hpp
demo/schema/: event_header.fbs  monster.fbs
include/: allocator.h  array_object.h  attribute.h  back_inserter.h  bind.h  bit_span.h  buddy_allocator.h  buffer_object.h  camera.h  color_formatter.h  common.h  component.h  component.tpp  component_manager.h  component_manager.tpp  concurrent_queue.h  concurrent_queue.tpp  copyer.h  cout_flush.h  dependency_injection.h  entity.h  entity_bundle.h  entity_constructor.h  entity_manager.h  file_util.h  flatbuffer_allocator.h  game_code.h  game_memory.h  game_memory_types.h  gc.h  geometry.h  gl_bind.h  gl_util.h  gsl.h  heap.h  imgui_manager.h  index_iterator.h  iterators.h  job_system.h  knight_string.h  (+41 more)
include/editor/: inspector.h  project_editor.h
include/win32/: path.h  platform_types.h  windows_util.h  windows_utils.h
schema/: entity.fbs  entity_collection_resource.fbs  entity_resource.fbs  event_header.fbs  monster.fbs  transform_component.fbs  types.fbs  unload_script.fbs
scripts/: test.lua
shaders/: blinn_phong.shader  simple.frag  simple.vert
src/: CMakeLists.txt  allocator.cpp  array_object.cpp  attribute.cpp  buddy_allocator.cpp  buffer_object.cpp  camera.cpp  common.cpp  component.cpp  component_manager.cpp  dependency_injection.cpp  entity.cpp  entity_manager.cpp  game_memory.cpp  geometry.cpp  gradient_map_material.cpp  imgui_manager.cpp  job_system.cpp  knight_string.cpp  main.cpp  material.cpp  mesh.cpp  mesh_component.cpp  path.cpp  program.cpp  script.cpp  shader.cpp  shader_cache.cpp  shader_program.cpp  slot_map.cpp  string_util.cpp  system.cpp  task_manager.cpp  thread_pool.cpp  transform_component.cpp  udp_listener.cpp  uniform.cpp  uniform_factory.cpp  uniform_manager.cpp  utils.cpp  (+2 more)
src/editor/: inspector.cpp  project_editor.cpp
src/win32/: file.cpp  file_read.cpp  file_util.cpp  file_write.cpp  game_code.cpp  path.cpp  windows_util.cpp  windows_utils.cpp
test/: CMakeLists.txt  bit_span_test.cpp  component_manager_test.cpp  concurrent_queue_test.cpp  entity_bundle_test.cpp  entity_manager_test.cpp  heap_test.cpp  index_iterator_test.cpp  knight_tests.cpp  priority_queue_test.cpp  slot_map_test.cpp  string_test.cpp  system_test.cpp  task_manager_test.cpp  test_main.cpp  thread_pool_test.cpp  transform_component_test.cpp  work_queue_test.cpp
type_erasure/: CMakeLists.txt  emtypen.cmake  small_buffer_allocator.h  type_erasure.h
type_erasure/emtypen/: CMakeLists.txt  emtypen.cpp  file_utils.h  form.hpp  headers.hpp
